kubernetes/best-practices/require_pod_antiaffinity/require_pod_antiaffinity.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-pod-antiaffinity
  annotations:
    policies.kyverno.io/title: Require Pod Anti-Affinity
    policies.kyverno.io/category: Best Practices
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      Pod anti-affinity ensures that Pods are not scheduled on the same node or topology
      as other matching Pods, enhancing fault tolerance and availability. This policy validates
      that Pods define either a required or preferred anti-affinity rule using 
      `requiredDuringSchedulingIgnoredDuringExecution` or 
      `preferredDuringSchedulingIgnoredDuringExecution` with a valid topologyKey.
spec:
  validationFailureAction: Audit
  rules:
    - name: require-either-hard-or-soft-antiaffinity
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: "Pod must have either required or preferred podAntiAffinity."
        anyPattern:
          - spec:
              affinity:
                podAntiAffinity:
                  requiredDuringSchedulingIgnoredDuringExecution:
                    - topologyKey: "*"
          - spec:
              affinity:
                podAntiAffinity:
                  preferredDuringSchedulingIgnoredDuringExecution:
                    - weight: "*"
                      podAffinityTerm:
                        topologyKey: "*"
